fix(Test): 리팩토링 과정에서 깨진 테스트 수정